--- a/nlp.html
+++ b/nlp.html
@@ -183,7 +183,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -216,7 +216,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-09-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.analyticsindiajobs.com/job/bewgle-natural-language-processing-engineer/?utm_source=Socials'>Natural Language Processing Engineer - Analytics India Jobs</a></h5> 
+<h5><a href='https://www.analyticsindiajobs.com/job/bewgle-natural-language-processing-engineer/?utm_source=Socials'>Natural Language Processing Engineer - Analytics India Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-24</p>
 <hr/>
@@ -244,7 +244,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-09-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thehub.fi/jobs/nlp-data-engineer-and-data-scientist'>The Hub | NLP Data Engineer &amp; Data Scientist @ Meeshkan</a></h5> 
+<h5><a href='https://thehub.fi/jobs/nlp-data-engineer-and-data-scientist'>The Hub | NLP Data Engineer &amp; Data Scientist @ Meeshkan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-20</p>
 <hr/>
@@ -297,7 +297,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
+<h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -368,7 +368,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/foundersfactory/85f00bc9-de99-4b99-b11e-173d9fb95065'>Founders Factory - Data Scientist NLP (Entale)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/foundersfactory/85f00bc9-de99-4b99-b11e-173d9fb95065'>Founders Factory - Data Scientist NLP (Entale)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 15, 2019 ... Data Scientist NLP (Entale). London, United Kingdom. Accelerator ? Engineering
 . Full-time. Apply for this job. We are looking for a talented Data Scientist to?...</p>
@@ -387,7 +387,7 @@ Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Italian in 
 Barcelona. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-globetech.icims.com/jobs/2542/nlp-engineer-with-norweigan/job'>Careers | NLP Engineer with Norweigan in Barcelona ... - GlobeTech</a></h5> 
+<h5><a href='https://careers-globetech.icims.com/jobs/2542/nlp-engineer-with-norweigan/job'>Careers | NLP Engineer with Norweigan in Barcelona ... - GlobeTech</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Norweigan 
 in Barcelona. Review all of the job details and apply today!</p>
@@ -404,7 +404,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">London London, United Kingdom  London</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rasa/jobs/4372857002'>Job Application for NLP Research Intern (m/f/x) at Rasa</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rasa/jobs/4372857002'>Job Application for NLP Research Intern (m/f/x) at Rasa</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
@@ -447,7 +447,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/omni/a29fd8dc-5ec9-462e-b419-8235e30fbdf3'>Omniscience - Natural Language Processing (NLP) Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/omni/a29fd8dc-5ec9-462e-b419-8235e30fbdf3'>Omniscience - Natural Language Processing (NLP) Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-08</p>
 <hr/>
